--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,18 +5,27 @@ layout: default
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
         <div class="post-meta">
-            <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
+            <span class="post-date"><i class="fas fa-calendar-alt"></i> {{ page.date | date: "%B %-d, %Y" }}</span>
             {% if page.author %}
-            • <span class="post-author">{{ page.author }}</span>
+            <span class="post-author"><i class="fas fa-user"></i> {{ page.author }}</span>
             {% endif %}
             {% if page.categories.size > 0 %}
-            • 
             <span class="post-categories">
+                <i class="fas fa-folder"></i>
                 {% for category in page.categories %}
                 <a href="{{ '/categories/' | append: category | downcase | relative_url }}">{{ category }}</a>{% unless forloop.last %}, {% endunless %}
                 {% endfor %}
             </span>
             {% endif %}
+            <span class="post-reading-time">
+                <i class="fas fa-clock"></i>
+                {% assign words = content | number_of_words %}
+                {% if words < 360 %}
+                1 min read
+                {% else %}
+                {{ words | divided_by: 180 }} min read
+                {% endif %}
+            </span>
         </div>
     </header>
 
@@ -26,20 +35,66 @@ layout: default
 
     {% if page.tags.size > 0 %}
     <div class="post-tags">
-        <strong>Tags:</strong>
+        <i class="fas fa-tags"></i>
         {% for tag in page.tags %}
         <a href="{{ '/tags/' | append: tag | downcase | relative_url }}">#{{ tag }}</a>
         {% endfor %}
     </div>
     {% endif %}
 
+    <div class="post-share">
+        <span>Share this post:</span>
+        <a href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}&url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer" class="twitter-share"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer" class="linkedin-share"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url | relative_url }}" target="_blank" rel="noopener noreferrer" class="facebook-share"><i class="fab fa-facebook"></i></a>
+    </div>
+
     <div class="post-navigation">
         {% if page.previous %}
-        <a class="post-nav-prev" href="{{ page.previous.url | relative_url }}">&larr; {{ page.previous.title }}</a>
+        <a class="post-nav-prev" href="{{ page.previous.url | relative_url }}">
+            <span class="post-nav-label"><i class="fas fa-arrow-left"></i> Previous</span>
+            <span class="post-nav-title">{{ page.previous.title }}</span>
+        </a>
         {% endif %}
         
         {% if page.next %}
-        <a class="post-nav-next" href="{{ page.next.url | relative_url }}">{{ page.next.title }} &rarr;</a>
+        <a class="post-nav-next" href="{{ page.next.url | relative_url }}">
+            <span class="post-nav-label">Next <i class="fas fa-arrow-right"></i></span>
+            <span class="post-nav-title">{{ page.next.title }}</span>
+        </a>
         {% endif %}
+    </div>
+    
+    <div class="related-posts">
+        <h3>Related Posts</h3>
+        <ul class="related-posts-list">
+        {% assign maxRelated = 3 %}
+        {% assign minCommonTags = 1 %}
+        {% assign maxRelatedCounter = 0 %}
+        
+        {% for post in site.posts %}
+            {% assign sameTagCount = 0 %}
+            {% for tag in post.tags %}
+                {% if post.url != page.url %}
+                    {% if page.tags contains tag %}
+                        {% assign sameTagCount = sameTagCount | plus: 1 %}
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+            
+            {% if sameTagCount >= minCommonTags %}
+                <li class="related-post-item">
+                    <a href="{{ post.url | relative_url }}">
+                        <span class="related-post-title">{{ post.title }}</span>
+                        <span class="related-post-date">{{ post.date | date: "%B %-d, %Y" }}</span>
+                    </a>
+                </li>
+                {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+                {% if maxRelatedCounter >= maxRelated %}
+                    {% break %}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+        </ul>
     </div>
 </article> 
