--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
                 <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="{{ '/blog/' | relative_url }}" {% if page.url contains '/blog/' %}class="active"{% endif %}><i class="fas fa-pencil-alt"></i> Blog</a></li>
                 <li><a href="{{ '/projects/' | relative_url }}" {% if page.url contains '/projects/' %}class="active"{% endif %}><i class="fas fa-code"></i> Projects</a></li>
+                <li><a href="{{ '/tags/' | relative_url }}" {% if page.url contains '/tags/' %}class="active"{% endif %}><i class="fas fa-tags"></i> Tags</a></li>
+                <li><a href="{{ '/categories/' | relative_url }}" {% if page.url contains '/categories/' %}class="active"{% endif %}><i class="fas fa-folder"></i> Categories</a></li>
                 <li><a href="{{ '/about/' | relative_url }}" {% if page.url contains '/about/' %}class="active"{% endif %}><i class="fas fa-user"></i> About</a></li>
             </ul>
         </nav>
