--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
     <div class="post-tags">
         <i class="fas fa-tags"></i>
         {% for tag in page.tags %}
-        <a href="{{ '/tags/' | append: tag | downcase | relative_url }}">#{{ tag }}</a>
+        <a href="{{ '/tags/' | append: tag | slugify | relative_url }}">#{{ tag }}</a>
         {% endfor %}
     </div>
     {% endif %}
