--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
+<!-- Optimised font loading with font-display -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"></noscript>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-MX1mqnklI1+w4n1vCtbmZh9rqx8pFazc2DSES0QPTsQ6NWGXfOtCaydC6Sm+CVijKpQYHf6PW0knYl4h3iiRig==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="icon" type="image/png" href="{{ site.logo | default: '/assets/images/favicon.png' | relative_url }}">
